# sphero_development

./: README.md  pyproject.toml  test_drive.py
docs/: Sphero_RVR_Raspberry_Pi_Setup_Guide.docx
src/sphero_rvr_mcp/: __main__.py  rvr_manager.py  sensor_manager.py  server.py
