[project]
name = "sphero-rvr-mcp"
version = "0.1.0"
description = "MCP server for controlling Sphero RVR with Claude AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "nest_asyncio>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
sphero-rvr-mcp = "sphero_rvr_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sphero_rvr_mcp"]
